# ct-iot-email-service-k8s

./: .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose-local.yml  docker-compose.yml  poetry.toml  pyproject.toml  requirements.txt
.github/workflows/: action.yml  tests.yml
helm/email-service/: Chart.yaml  local-values.yaml  values.yaml
helm/email-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
src/: config.py
src/email_service/: __main__.py  service.py
src/kafka/: email_consumer.py
src/message_queue/: email_consumer.py
src/ses/: ses_service.py
src/utils/: app_util.py
tests/: config.py  conftest.py
tests/helper/: email_helper.py  kafka_helper.py  producer_helper.py  routes_helper.py  token_helper.py
tests/integration/routers/: healthz_route_test.py
tests/kafka/: email_consumer_test.py
tests/unit/utils/: app_util_test.py
